--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styles-index.css">
+    <link rel="stylesheet" href="styles_index.css">
 
     <!-- TITTLE -->
     <title>Document</title>
@@ -39,7 +39,8 @@
     </footer>
 
     <!-- JS -->
-    <script src="./js/products.js"></script>
+    <script src="./js/products.js" defer></script>
     <script src="./js/script.js" defer></script>
+    <script src="./js/cartInfo.js" defer></script>
 </body>
 </html>
