--- a/cart.html
+++ b/cart.html
@@ -31,12 +31,13 @@
     </header>
 
     <main>
+        <p id="empty-cart">No hay productos en el carrito. <a href="./index.html">Agrega algunos</a></p>
         <section id="products-container"></section>
         <section id="totals">
             <p>Total unidades: <span id="units">0</span></p>
             <p>Total precio: $<span id="price">0</span></p>
-            <button class="btnBuy" disabled>Comprar</button>
-            <button class="btnRst">Reiniciar carrito</button>
+            <button id="btnBuy" >Comprar</button>
+            <button id="btnRst">Reiniciar carrito</button>
         </section>
     </main>
 
