falta el simulador de descuentos

--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
         <section id="totals">
             <p>Total unidades: <span id="units">0</span></p>
             <p>Total precio: $<span id="price">0</span></p>
-            <button id="btnBuy" >Comprar</button>
+            <button id="btnBuyDiscount" >Comprar</button>
             <button id="btnRst">Reiniciar carrito</button>
         </section>
     </main>
@@ -49,5 +49,6 @@
     <!-- JS -->
     <script src="./js/cart.js" defer></script>
     <script src="./js/cartInfo.js" defer></script>
+    <script src="./js/simuladorDeDescuento.js" defer></script>
 </body>
 </html>
